--- a/submit.html
+++ b/submit.html
@@ -131,7 +131,7 @@
 
   <section class="content">
     <h1>Page still under construction</h1>
-    <p>Thanks for checking out our submissions page. We’re almost ready to start accepting your weird, glitchy, cybernetic creations. Check back soon.</p>
+    <p>Thanks for checking out our submissions page. We’re almost ready to start accepting your weird shitty creations. Check back soon.</p>
   </section>
 
   <footer>
