--- a/submit.html
+++ b/submit.html
@@ -50,8 +50,11 @@
       padding: 0 2rem;
       text-align: center;
     }
-    .content h1 {
-      color: #ff4ac2;
+    .gradient-heading {
+      font-size: 2rem;
+      background: linear-gradient(90deg, #f72585, #7209b7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       margin-bottom: 1rem;
     }
     .content p {
@@ -130,8 +133,8 @@
   </nav>
 
   <section class="content">
-    <h1>Page still under construction</h1>
-    <p>Thanks for checking out our submissions page. We’re almost ready to start accepting your weird shitty creations. Check back soon.</p>
+    <h1 class="gradient-heading">Page still under construction</h1>
+    <p>Thanks for checking out our submissions page. We’re almost ready to start accepting your weird, glitchy, cybernetic creations. Check back soon.</p>
   </section>
 
   <footer>
