--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Submit – Burnline</title>
+  <title>Burnline – The Cyberpunk Magazine</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -12,11 +12,12 @@
       background: linear-gradient(135deg, #0f0f1c, #1b1e35);
       color: #f0f0f0;
     }
-
-    h1, h2, h3, h4, nav a, header {
+    html {
+      scroll-behavior: smooth;
+    }
+    h1, h2, h3, h4, h5, h6, nav a, header {
       font-family: 'Orbitron', sans-serif;
     }
-
     header {
       display: flex;
       align-items: center;
@@ -25,126 +26,154 @@
       color: #0f0f1c;
       padding: 1.5rem;
       font-size: 2rem;
+      letter-spacing: 1px;
       gap: 1rem;
     }
-
     header img {
       height: 60px;
       width: auto;
     }
-
     nav {
       display: flex;
       justify-content: center;
       gap: 2rem;
       background-color: #131625;
       padding: 1rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-
     nav a {
       color: #0df6e3;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s;
     }
-
     nav a:hover {
-      text-decoration: underline;
+      color: #ff4ac2;
     }
-
-    .content {
-      max-width: 800px;
-      margin: 4rem auto;
-      padding: 0 2rem;
-      text-align: center;
+    .hero {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 3rem;
+      padding: 4rem 2rem;
+      background: linear-gradient(to right, #1b1e35, #2d2b4a);
+      text-align: left;
+      flex-wrap: wrap;
     }
-
-    /* Gradient Text Styles */
-    .gradient-heading {
-      font-size: 2rem;
-      background: linear-gradient(90deg, #f72585, #7209b7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    .hero-text {
+      max-width: 600px;
+    }
+    .hero-text h1 {
+      font-size: 2.2rem;
+      color: #ff4ac2;
       margin-bottom: 1rem;
     }
-
-    .gradient-pink {
-      background: linear-gradient(90deg, #ff4ac2, #c52bd9);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .gradient-blue {
-      background: linear-gradient(90deg, #0df6e3, #2abfff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .content p {
-      line-height: 1.7;
+    .hero-text p {
+      font-size: 1.2rem;
       color: #ccc;
-      margin-bottom: 1.2rem;
+      margin-bottom: 1.5rem;
     }
-
-    /* Footer Styles */
+    .hero img {
+      max-width: 300px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      padding: 3rem 2rem;
+    }
+    .card {
+      background: #22253e;
+      border-radius: 12px;
+      padding: 1.5rem;
+      box-shadow: 0 0 20px rgba(13, 246, 227, 0.1);
+    }
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+    .card h3 {
+      color: #0df6e3;
+      margin-bottom: 0.5rem;
+    }
+    .card p {
+      font-size: 0.95rem;
+      color: #bbb;
+    }
     footer {
       background: #0f0f1c;
-      padding: 2rem 1rem;
-      color: #ccc;
+      padding: 4rem 2rem 2rem;
+      color: #aaa;
+      font-size: 0.9rem;
+      font-family: 'Inter', sans-serif;
     }
-
+    footer a:hover {
+      color: #0df6e3;
+    }
     .footer-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      gap: 3rem;
       max-width: 1200px;
       margin: auto;
     }
-
     .footer-column {
-      flex: 1;
-      min-width: 250px;
-      margin: 1rem;
+      flex: 1 1 250px;
+      min-width: 200px;
     }
-
     .footer-logo {
-      width: 60px;
+      height: 100px;
       margin-bottom: 1rem;
     }
-
-    .newsletter-input {
-      padding: 0.5rem;
-      border: none;
-      border-radius: 4px;
-      width: 100%;
-      max-width: 250px;
-      margin-bottom: 0.5rem;
-    }
-
-    .newsletter-button {
-      padding: 0.5rem 1rem;
-      background-color: #0df6e3;
-      border: none;
-      border-radius: 4px;
-      color: #0f0f1c;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .newsletter-button:hover {
-      background-color: #0bc2b7;
-    }
-
     .footer-bottom {
       text-align: center;
-      margin-top: 2rem;
-      font-size: 0.8rem;
-      color: #666;
+      margin-top: 3rem;
+      border-top: 1px solid #222;
+      padding-top: 1rem;
+      color: #555;
     }
+    .newsletter-input {
+      padding: 0.6rem 1rem;
+      border-radius: 4px;
+      border: none;
+      width: 70%;
+      margin-bottom: 0.8rem;
+    }
+    .newsletter-button {
+      padding: 0.6rem 1.2rem;
+      background-color: #0df6e3;
+      color: #0f0f1c;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .read-issue-btn {
+  background-color: #0df6e3;
+  border: none;
+  color: #0f0f1c;
+  padding: 0.75rem 2rem;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 1rem;
+  transition: background-color 0.3s;
+}
 
-    .footer-column a:hover {
-      text-decoration: underline;
-      color: #0df6e3;
-    }
+.read-issue-btn:hover {
+  background-color: #0ad3c6;
+}
   </style>
 </head>
 <body>
@@ -154,17 +183,38 @@
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="features.html">Features</a>
-    <a href="fiction.html">Fiction</a>
-    <a href="art.html">Art</a>
+    <a href="#features">Features</a>
+    <a href="https://bowliopia.github.io/burnline/fiction.html">Fiction</a>
+    <a href="#art">Art</a>
     <a href="https://bowliopia.github.io/burnline/about.html">About</a>
-    <a href="submit.html">Submit</a>
+    <a href="https://bowliopia.github.io/burnline/submit.html">Submit</a>
   </nav>
 
-  <section class="content">
-    <h1 class="gradient-heading">Page still under construction</h1>
-    <p>Thanks for checking out our <span class="gradient-pink">submissions page</span>. We’re almost ready to start accepting your <span class="gradient-blue">weird, glitchy, cybernetic</span> creations. Check back soon.</p>
+<section class="hero">
+  <div class="hero-text">
+    <h1>The Latest Issue</h1>
+    <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam]. Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
+    <a href="fiction.html" class="read-issue-btn">Read this Issue</a>
+  </div>
+  <img src="Test Cover 1.png" alt="Latest issue cover">
+</section>
+
+  <section class="grid" id="features">
+    <div class="card">
+      <img src="AL Cover.png" alt="Featured Stories image">
+      <h3>Featured Stories</h3>
+      <p>Explore high-voltage fiction from the neon edge — a curated selection of our boldest, strangest, and most unforgettable tales.</p>
+    </div>
+    <div class="card">
+      <img src="NM Art.png" alt="Poll image">
+      <h3>Poll: Best Cyberpunk Media</h3>
+      <p>We asked readers to weigh in on the most iconic games, movies, books, and art that define the cyberpunk canon. Here’s what they said.</p>
+    </div>
+    <div class="card">
+      <img src="CS2 Keyart.jpg" alt="Stuff We Like image">
+      <h3>Stuff We Like</h3>
+      <p>From glitchwave aesthetics to narrative-heavy indies, we round up the weird, wired, and wonderful media on our radar.</p>
+    </div>
   </section>
 
   <footer>
@@ -172,7 +222,7 @@
       <!-- Newsletter -->
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p style="line-height: 1.6;">Sign up to our <span class="gradient-pink">newsletter</span> to get the latest stories, art, and neon-lit news from Burnline.</p>
+        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input">
           <br>
@@ -182,13 +232,13 @@
 
       <!-- Contact Info -->
       <div class="footer-column">
-        <h4 class="gradient-blue">Get In Touch</h4>
+        <h4 style="color: #0df6e3;">Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
 
       <!-- Read -->
       <div class="footer-column">
-        <h4 class="gradient-blue">Read</h4>
+        <h4 style="color: #0df6e3;">Read</h4>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
         <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
