--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
       max-width: 600px;
     }
     .hero-text h1 {
-      font-size: 2.2rem;
-      color: #ff4ac2;
-      margin-bottom: 1rem;
-    }
+  font-size: 2.2rem;
+  margin-bottom: 1rem;
+  background: linear-gradient(90deg, #ff4ac2, #ff7de9);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
     .hero-text p {
       font-size: 1.2rem;
       color: #ccc;
