--- a/submit.html
+++ b/submit.html
@@ -134,7 +134,7 @@
 
   <section class="content">
     <h1 class="gradient-heading">Page still under construction</h1>
-    <p>Thanks for checking out our submissions page. We’re almost ready to start accepting your weird, glitchy, cybernetic creations. Check back soon.</p>
+    <p>Thanks for checking out our submissions page. We’re almost ready to start accepting your weird shittyreations. Check back soon.</p>
   </section>
 
   <footer>
