--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
       font-size: 0.95rem;
       color: #bbb;
     }
+      .gradient-heading {
+      font-size: 2rem;
+      background: linear-gradient(90deg, #f72585, #7209b7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 1rem;
+    }
     footer {
       background: #0f0f1c;
       padding: 4rem 2rem 2rem;
