--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 <section class="hero">
   <div class="hero-text">
-    <h1>The Latest Issue</h1>
+    <h1 class="gradient-heading">The Latest Issue</h1>
     <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam]. Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
     <a href="fiction.html" class="read-issue-btn">Read this Issue</a>
   </div>
