--- a/art.html
+++ b/art.html
@@ -164,7 +164,7 @@
 
   <section class="content">
     <h1 class="gradient-heading">Page still under construction</h1>
-    <p>Thanks for checking out our <span class="gradient-pink">art page</span>. We’re almost ready to start accepting and showing off your <span class="gradient-blue"> shitty art. Check back soon.</p>
+    <p>Thanks for checking out our <span class="gradient-pink">art page</span>. We’re almost ready to start accepting and showing off your shitty art. <span class="gradient-blue"> Check back soon.</p>
   </section>
 
   <footer>
