--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <nav>
     <a href="#features">Features</a>
     <a href="https://bowliopia.github.io/burnline/fiction.html">Fiction</a>
-    <a href="#art">Art</a>
+    <a href="https://bowliopia.github.io/burnline/art.html">Art</a>
     <a href="https://bowliopia.github.io/burnline/about.html">About</a>
     <a href="https://bowliopia.github.io/burnline/submit.html">Submit</a>
   </nav>
