--- a/fiction.html
+++ b/fiction.html
@@ -29,6 +29,13 @@
       height: 60px;
       width: auto;
     }
+        .gradient-heading {
+      font-size: 2rem;
+      background: linear-gradient(90deg, #f72585, #7209b7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 1rem;
+    }
     nav {
       display: flex;
       justify-content: center;
@@ -170,7 +177,7 @@
   </nav>
 
   <section class="content">
-    <h1>Original Fiction</h1>
+    <h1 class="gradient-heading">Original Fiction</h1>
     <div class="story-grid" id="storyGrid">
       <!-- Placeholder Stories -->
       <div class="story-card">
