--- a/about.html
+++ b/about.html
@@ -25,6 +25,13 @@
       font-size: 2rem;
       gap: 1rem;
     }
+            .gradient-heading {
+      font-size: 2rem;
+      background: linear-gradient(90deg, #f72585, #7209b7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 1rem;
+    }
     header img {
       height: 60px;
       width: auto;
@@ -129,7 +136,7 @@
   </nav>
 
   <section class="content">
-    <h1>About Burnline</h1>
+    <h1 class="gradient-heading">About Burnline</h1>
     <p><strong>Burnline</strong> is a digital magazine run by a small crew who's tried our best to make a hub for all things cyberpunk.We publish stories, art, and commentary that reflects the weirdness of whatever the hell cyberpunk is supposed to be. Feel like the real world is folding in on itself? Us too. Let's make some art about it.</p>
     <p>If you’d like to submit, collaborate, or just say hi, head over to our <a href="submit.html" style="color:#0df6e3;">Submit</a> page or reach out at <em>contact@burnline.net</em>. If there's anything we don't express on this site that you think belongs here, we'd love to hear about it.</p>
   </section>
