--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       font-size: 2rem;
       font-family: 'Orbitron', sans-serif;
       flex-wrap: wrap;
+      position: relative;
     }
 
     .logo-title {
@@ -57,6 +58,43 @@
 
     .site-nav a:hover {
       color: #ff4ac2;
+    }
+
+    /* Hamburger styles */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      width: 30px;
+      height: 25px;
+      gap: 5px;
+    }
+
+    .hamburger div {
+      background: #0f0f1c;
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+    }
+
+    @media (max-width: 768px) {
+      .site-nav {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+        background-color: #0df6e3;
+        padding: 1rem 0;
+        margin-top: 1rem;
+      }
+
+      .site-nav.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
     }
 
     .hero {
@@ -216,7 +254,12 @@
       <img src="Flame logo-1.png.png" alt="Burnline logo">
       <span>BURNLINE</span>
     </div>
-    <nav class="site-nav">
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="site-nav" id="site-nav">
       <a href="#features">Features</a>
       <a href="https://bowliopia.github.io/burnline/fiction.html">Fiction</a>
       <a href="https://bowliopia.github.io/burnline/art.html">Art</a>
@@ -255,7 +298,6 @@
 
   <footer>
     <div class="footer-container">
-      <!-- Newsletter -->
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
         <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
@@ -266,13 +308,11 @@
         </form>
       </div>
 
-      <!-- Contact Info -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
 
-      <!-- Read -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Read</h4>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
@@ -286,5 +326,11 @@
     </div>
   </footer>
 
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById('site-nav');
+      nav.classList.toggle('active');
+    }
+  </script>
 </body>
 </html>
