--- a/submit.html
+++ b/submit.html
@@ -12,44 +12,95 @@
       background: linear-gradient(135deg, #0f0f1c, #1b1e35);
       color: #f0f0f0;
     }
+
     h1, h2, h3, h4, nav a, header {
       font-family: 'Orbitron', sans-serif;
     }
-    header {
+
+    .site-header {
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
       background: #0df6e3;
       color: #0f0f1c;
-      padding: 1.5rem;
+      padding: 1rem 2rem;
       font-size: 2rem;
+      font-family: 'Orbitron', sans-serif;
+      flex-wrap: wrap;
+      position: relative;
+    }
+
+    .logo-title {
+      display: flex;
+      align-items: center;
       gap: 1rem;
     }
-    header img {
+
+    .logo-title img {
       height: 60px;
       width: auto;
     }
-    nav {
+
+    .site-nav {
       display: flex;
-      justify-content: center;
       gap: 2rem;
-      background-color: #131625;
-      padding: 1rem;
+      font-size: 1rem;
     }
-    nav a {
-      color: #0df6e3;
+
+    .site-nav a {
+      color: #0f0f1c;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s;
     }
-    nav a:hover {
-      text-decoration: underline;
+
+    .site-nav a:hover {
+      color: #ff4ac2;
     }
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      width: 30px;
+      height: 25px;
+      gap: 5px;
+    }
+
+    .hamburger div {
+      background: #0f0f1c;
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+    }
+
+    @media (max-width: 768px) {
+      .site-nav {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+        background-color: #0df6e3;
+        padding: 1rem 0;
+        margin-top: 1rem;
+      }
+
+      .site-nav.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
+
     .content {
       max-width: 800px;
       margin: 4rem auto;
       padding: 0 2rem;
       text-align: center;
     }
+
     .gradient-heading {
       font-size: 2rem;
       background: linear-gradient(90deg, #f72585, #7209b7);
@@ -57,18 +108,19 @@
       -webkit-text-fill-color: transparent;
       margin-bottom: 1rem;
     }
+
     .content p {
       line-height: 1.7;
       color: #ccc;
       margin-bottom: 1.2rem;
     }
 
-    /* Footer Styles */
     footer {
       background: #0f0f1c;
       padding: 2rem 1rem;
       color: #ccc;
     }
+
     .footer-container {
       display: flex;
       flex-wrap: wrap;
@@ -76,15 +128,18 @@
       max-width: 1200px;
       margin: auto;
     }
+
     .footer-column {
       flex: 1;
       min-width: 250px;
       margin: 1rem;
     }
+
     .footer-logo {
       width: 60px;
       margin-bottom: 1rem;
     }
+
     .newsletter-input {
       padding: 0.5rem;
       border: none;
@@ -93,6 +148,7 @@
       max-width: 250px;
       margin-bottom: 0.5rem;
     }
+
     .newsletter-button {
       padding: 0.5rem 1rem;
       background-color: #0df6e3;
@@ -102,15 +158,18 @@
       cursor: pointer;
       font-weight: bold;
     }
+
     .newsletter-button:hover {
       background-color: #0bc2b7;
     }
+
     .footer-bottom {
       text-align: center;
       margin-top: 2rem;
       font-size: 0.8rem;
       color: #666;
     }
+
     .footer-column a:hover {
       text-decoration: underline;
       color: #0df6e3;
@@ -118,19 +177,26 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="Flame logo-1.png.png" alt="Burnline logo">
-    BURNLINE
-  </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="features.html">Features</a>
-    <a href="fiction.html">Fiction</a>
-    <a href="art.html">Art</a>
-    <a href="https://bowliopia.github.io/burnline/about.html">About</a>
-    <a href="submit.html">Submit</a>
-  </nav>
+  <header class="site-header">
+    <div class="logo-title">
+      <img src="Flame logo-1.png.png" alt="Burnline logo">
+      <span>BURNLINE</span>
+    </div>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="site-nav" id="site-nav">
+      <a href="index.html">Home</a>
+      <a href="features.html">Features</a>
+      <a href="fiction.html">Fiction</a>
+      <a href="art.html">Art</a>
+      <a href="https://bowliopia.github.io/burnline/about.html">About</a>
+      <a href="submit.html">Submit</a>
+    </nav>
+  </header>
 
   <section class="content">
     <h1 class="gradient-heading">Page still under construction</h1>
@@ -139,7 +205,6 @@
 
   <footer>
     <div class="footer-container">
-      <!-- Newsletter -->
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
         <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
@@ -150,13 +215,11 @@
         </form>
       </div>
 
-      <!-- Contact Info -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
 
-      <!-- Read -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Read</h4>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
@@ -169,5 +232,12 @@
       &copy; 2025 Burnline Magazine — All rights reserved
     </div>
   </footer>
+
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById('site-nav');
+      nav.classList.toggle('active');
+    }
+  </script>
 </body>
 </html>
