--- a/fiction.html
+++ b/fiction.html
@@ -15,86 +15,145 @@
     h1, h2, h3, h4, nav a, header {
       font-family: 'Orbitron', sans-serif;
     }
-    header {
+
+    .site-header {
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
       background: #0df6e3;
       color: #0f0f1c;
-      padding: 1.5rem;
+      padding: 1rem 2rem;
       font-size: 2rem;
+      font-family: 'Orbitron', sans-serif;
+      flex-wrap: wrap;
+      position: relative;
+    }
+
+    .logo-title {
+      display: flex;
+      align-items: center;
       gap: 1rem;
     }
-    header img {
+
+    .logo-title img {
       height: 60px;
       width: auto;
     }
-        .gradient-heading {
+
+    .site-nav {
+      display: flex;
+      gap: 2rem;
+      font-size: 1rem;
+    }
+
+    .site-nav a {
+      color: #0f0f1c;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    .site-nav a:hover {
+      color: #ff4ac2;
+    }
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      width: 30px;
+      height: 25px;
+      gap: 5px;
+    }
+
+    .hamburger div {
+      background: #0f0f1c;
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+    }
+
+    @media (max-width: 768px) {
+      .site-nav {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+        background-color: #0df6e3;
+        padding: 1rem 0;
+        margin-top: 1rem;
+      }
+
+      .site-nav.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
+
+    .gradient-heading {
       font-size: 2rem;
       background: linear-gradient(90deg, #f72585, #7209b7);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       margin-bottom: 1rem;
     }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      background-color: #131625;
-      padding: 1rem;
-    }
-    nav a {
-      color: #0df6e3;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
+
     .content {
       max-width: 1200px;
       margin: 2rem auto;
       padding: 0 2rem;
     }
+
     .content h1 {
       color: #ff4ac2;
       text-align: center;
       margin-bottom: 2rem;
     }
+
     .story-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
       gap: 2rem;
     }
+
     .story-card {
       background-color: #1c1e2f;
       border-radius: 8px;
       padding: 1rem;
     }
+
     .story-card img {
       width: 100%;
       border-radius: 6px;
       margin-bottom: 1rem;
     }
+
     .story-card h3 {
       color: #0df6e3;
       font-size: 1.1rem;
       margin-bottom: 0.5rem;
     }
+
     .story-card p {
       font-size: 0.9rem;
       color: #ccc;
       margin-bottom: 0.5rem;
       line-height: 1.4;
     }
+
     .story-card small {
       color: #777;
       font-size: 0.8rem;
     }
+
     .load-more-container {
       text-align: center;
       margin: 3rem 0 5rem;
     }
+
     .load-more-btn {
       background-color: #0df6e3;
       border: none;
@@ -105,16 +164,18 @@
       border-radius: 4px;
       cursor: pointer;
     }
+
     .load-more-btn:hover {
       background-color: #0ad3c6;
     }
-    /* Footer */
+
     footer {
       background: #0f0f1c;
       padding: 2rem;
       color: #ccc;
       margin-top: 4rem;
     }
+
     .footer-container {
       display: flex;
       flex-wrap: wrap;
@@ -123,14 +184,17 @@
       max-width: 1200px;
       margin: 0 auto;
     }
+
     .footer-column {
       flex: 1;
       min-width: 220px;
     }
+
     .footer-logo {
       width: 80px;
       margin-bottom: 1rem;
     }
+
     .newsletter-input {
       padding: 0.5rem;
       width: 80%;
@@ -138,6 +202,7 @@
       border-radius: 4px;
       border: none;
     }
+
     .newsletter-button {
       padding: 0.5rem 1rem;
       background-color: #0df6e3;
@@ -147,34 +212,45 @@
       border-radius: 4px;
       cursor: pointer;
     }
+
     .footer-bottom {
       text-align: center;
       margin-top: 2rem;
       color: #777;
       font-size: 0.85rem;
     }
+
     a {
       color: #0df6e3;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="Flame logo-1.png.png" alt="Burnline logo">
-    BURNLINE
+
+  <header class="site-header">
+    <div class="logo-title">
+      <img src="Flame logo-1.png.png" alt="Burnline logo">
+      <span>BURNLINE</span>
+    </div>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="site-nav" id="site-nav">
+      <a href="index.html">Home</a>
+      <a href="features.html">Features</a>
+      <a href="fiction.html">Fiction</a>
+      <a href="art.html">Art</a>
+      <a href="about.html">About</a>
+      <a href="submit.html">Submit</a>
+    </nav>
   </header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="features.html">Features</a>
-    <a href="fiction.html">Fiction</a>
-    <a href="art.html">Art</a>
-    <a href="about.html">About</a>
-    <a href="submit.html">Submit</a>
-  </nav>
 
   <section class="content">
     <h1 class="gradient-heading">Original Fiction</h1>
@@ -204,9 +280,8 @@
     </div>
   </section>
 
-   <footer>
+  <footer>
     <div class="footer-container">
-      <!-- Newsletter -->
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
         <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
@@ -217,13 +292,11 @@
         </form>
       </div>
 
-      <!-- Contact Info -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
 
-      <!-- Read -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Read</h4>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
@@ -237,8 +310,12 @@
     </div>
   </footer>
 
-
   <script>
+    function toggleMenu() {
+      const nav = document.getElementById('site-nav');
+      nav.classList.toggle('active');
+    }
+
     const moreStories = [
       {
         img: "https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Pulsewave",
