--- a/art.html
+++ b/art.html
@@ -17,38 +17,81 @@
       font-family: 'Orbitron', sans-serif;
     }
 
-    header {
+    .site-header {
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
       background: #0df6e3;
       color: #0f0f1c;
-      padding: 1.5rem;
+      padding: 1rem 2rem;
       font-size: 2rem;
+      font-family: 'Orbitron', sans-serif;
+      flex-wrap: wrap;
+      position: relative;
+    }
+
+    .logo-title {
+      display: flex;
+      align-items: center;
       gap: 1rem;
     }
 
-    header img {
+    .logo-title img {
       height: 60px;
       width: auto;
     }
 
-    nav {
+    .site-nav {
       display: flex;
-      justify-content: center;
       gap: 2rem;
-      background-color: #131625;
-      padding: 1rem;
+      font-size: 1rem;
     }
 
-    nav a {
-      color: #0df6e3;
+    .site-nav a {
+      color: #0f0f1c;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    .site-nav a:hover {
+      color: #ff4ac2;
+    }
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      cursor: pointer;
+      width: 30px;
+      height: 25px;
+      gap: 5px;
+    }
+
+    .hamburger div {
+      background: #0f0f1c;
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+    }
+
+    @media (max-width: 768px) {
+      .site-nav {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+        background-color: #0df6e3;
+        padding: 1rem 0;
+        margin-top: 1rem;
+      }
+
+      .site-nav.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
     }
 
     .content {
@@ -58,7 +101,6 @@
       text-align: center;
     }
 
-    /* Gradient Text Styles */
     .gradient-heading {
       font-size: 2rem;
       background: linear-gradient(90deg, #f72585, #7209b7);
@@ -85,7 +127,6 @@
       margin-bottom: 1.2rem;
     }
 
-    /* Footer Styles */
     footer {
       background: #0f0f1c;
       padding: 2rem 1rem;
@@ -148,23 +189,30 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="Flame logo-1.png.png" alt="Burnline logo">
-    BURNLINE
-  </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="features.html">Features</a>
-    <a href="fiction.html">Fiction</a>
-    <a href="art.html">Art</a>
-    <a href="https://bowliopia.github.io/burnline/about.html">About</a>
-    <a href="submit.html">Submit</a>
-  </nav>
+  <header class="site-header">
+    <div class="logo-title">
+      <img src="Flame logo-1.png.png" alt="Burnline logo">
+      <span>BURNLINE</span>
+    </div>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="site-nav" id="site-nav">
+      <a href="index.html">Home</a>
+      <a href="features.html">Features</a>
+      <a href="fiction.html">Fiction</a>
+      <a href="art.html">Art</a>
+      <a href="https://bowliopia.github.io/burnline/about.html">About</a>
+      <a href="submit.html">Submit</a>
+    </nav>
+  </header>
 
   <section class="content">
     <h1 class="gradient-heading">Page still under construction</h1>
-    <p>Thanks for checking out our <span class="gradient-pink">art page</span>. We’re almost ready to start accepting and showing off your shitty art. <span class="gradient-blue"> Check back soon.</p>
+    <p>Thanks for checking out our <span class="gradient-pink">art page</span>. We’re almost ready to start accepting and showing off your shitty art. <span class="gradient-blue"> Check back soon.</span></p>
   </section>
 
   <footer>
@@ -199,5 +247,12 @@
       &copy; 2025 Burnline Magazine — All rights reserved
     </div>
   </footer>
+
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById('site-nav');
+      nav.classList.toggle('active');
+    }
+  </script>
 </body>
 </html>
