--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
 <body>
 
   <header class="site-header">
-    <div class="logo-title">
-      <img src="Flame logo-1.png.png" alt="Burnline logo">
-      <span>BURNLINE</span>
-    </div>
+<a href="index.html" class="logo-title">
+  <img src="Flame logo-1.png.png" alt="Burnline logo">
+  <span>BURNLINE</span>
+</a>
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
