--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       display: flex;
       align-items: center;
       gap: 1rem;
+      text-decoration: none;
+      color: inherit;
     }
 
     .logo-title img {
