--- a/fiction.html
+++ b/fiction.html
@@ -33,6 +33,8 @@
       display: flex;
       align-items: center;
       gap: 1rem;
+        text-decoration: none;
+  color: inherit;
     }
 
     .logo-title img {
@@ -233,10 +235,10 @@
 <body>
 
   <header class="site-header">
-    <div class="logo-title">
-      <img src="Flame logo-1.png.png" alt="Burnline logo">
-      <span>BURNLINE</span>
-    </div>
+<a href="index.html" class="logo-title">
+  <img src="Flame logo-1.png.png" alt="Burnline logo">
+  <span>BURNLINE</span>
+</a>
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
