--- a/art.html
+++ b/art.html
@@ -131,6 +131,7 @@
       border-radius: 10px;
       overflow: hidden;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
     }
 
     .art-tile:hover {
@@ -143,6 +144,53 @@
       height: 300px;
       object-fit: cover;
       display: block;
+    }
+
+    .caption {
+      padding: 1rem;
+      color: #ccc;
+    }
+
+    .caption h4 {
+      margin: 0 0 0.3rem;
+      color: #0df6e3;
+    }
+
+    .caption p {
+      font-size: 0.9rem;
+      margin: 0;
+    }
+
+    /* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.9);
+    }
+
+    .modal-content {
+      margin: 5% auto;
+      display: block;
+      max-width: 90%;
+      max-height: 80vh;
+      border-radius: 10px;
+      box-shadow: 0 0 30px rgba(13, 246, 227, 0.2);
+    }
+
+    .close {
+      position: absolute;
+      top: 20px;
+      right: 35px;
+      color: #0df6e3;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
     }
 
     footer {
@@ -228,15 +276,77 @@
   </section>
 
   <section class="gallery-grid">
-    <div class="art-tile"><img src="Placeholder Image 1.png" alt="Cyberpunk Art 1"></div>
-    <div class="art-tile"><img src="Placeholder Image 2.png" alt="Cyberpunk Art 2"></div>
-    <div class="art-tile"><img src="Placeholder Image 3.png" alt="Cyberpunk Art 3"></div>
-    <div class="art-tile"><img src="Placeholder Image 4.png" alt="Cyberpunk Art 4"></div>
-    <div class="art-tile"><img src="Placeholder Image 5.png" alt="Cyberpunk Art 5"></div>
-    <div class="art-tile"><img src="Placeholder Image 6.png" alt="Cyberpunk Art 6"></div>
-    <div class="art-tile"><img src="Placeholder Image 7.png" alt="Cyberpunk Art 7"></div>
-    <div class="art-tile"><img src="Placeholder Image 8.png" alt="Cyberpunk Art 8"></div>
+    <!-- Tile Template -->
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 1.png" alt="Art 1">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
+
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 2.png" alt="Art 2">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
+
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 3.png" alt="Art 3">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
+
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 4.png" alt="Art 4">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
+
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 5.png" alt="Art 5">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
+
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 6.png" alt="Art 6">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
+
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 7.png" alt="Art 7">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
+
+    <div class="art-tile" onclick="openModal(this)">
+      <img src="Placeholder Image 8.png" alt="Art 8">
+      <div class="caption">
+        <h4>Title or short description here</h4>
+        <p>Artist Name Here</p>
+      </div>
+    </div>
   </section>
+
+  <!-- Modal -->
+  <div id="imageModal" class="modal" onclick="closeModal()">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="modalImage" alt="Expanded artwork">
+  </div>
 
   <footer>
     <div class="footer-container">
@@ -273,6 +383,21 @@
       const nav = document.getElementById('site-nav');
       nav.classList.toggle('active');
     }
+
+    function openModal(tile) {
+      const imgSrc = tile.querySelector('img').src;
+      const modal = document.getElementById('imageModal');
+      const modalImg = document.getElementById('modalImage');
+      modal.style.display = "block";
+      modalImg.src = imgSrc;
+    }
+
+    function closeModal() {
+      document.getElementById('imageModal').style.display = "none";
+    }
+
+    document.querySelector('.close').addEventListener('click', closeModal);
   </script>
+
 </body>
 </html>
